--- a/templates/overview_students.mustache
+++ b/templates/overview_students.mustache
@@ -71,17 +71,29 @@
 
 <ul class="nav nav-tabs" id="mooduellTab" role="tablist">
     <li class="nav-item">
-        <a class="nav-link active" id="statistics-tab" data-toggle="tab" href="#statistics" role="tab" aria-controls="statistics" aria-selected="true"><h4>{{#str}}
-            statistics, mod_mooduell {{/str}}</h4></a>
+        <a class="nav-link active" id="statistics-tab" data-toggle="tab" href="#statistics" role="tab"
+            aria-controls="statistics" aria-selected="true">
+            <h4>{{#str}}
+                statistics, mod_mooduell {{/str}}</h4>
+        </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="opengames-tab" data-toggle="tab" href="#opengames" role="tab" aria-controls="opengames" aria-selected="true"><h4>{{#str}} opengames, mod_mooduell {{/str}}</h4></a>
+        <a class="nav-link" id="opengames-tab" data-toggle="tab" href="#opengames" role="tab" aria-controls="opengames"
+            aria-selected="true">
+            <h4>{{#str}} opengames, mod_mooduell {{/str}}</h4>
+        </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="finishedgames-tab" data-toggle="tab" href="#finishedgames" role="tab" aria-controls="finishedgames" aria-selected="false"><h4>{{#str}} finishedgames, mod_mooduell {{/str}}</h4></a>
+        <a class="nav-link" id="finishedgames-tab" data-toggle="tab" href="#finishedgames" role="tab"
+            aria-controls="finishedgames" aria-selected="false">
+            <h4>{{#str}} finishedgames, mod_mooduell {{/str}}</h4>
+        </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="highscores-tab" data-toggle="tab" href="#highscores" role="tab" aria-controls="highscores" aria-selected="false"><h4>{{#str}} highscores, mod_mooduell {{/str}}</h4></a>
+        <a class="nav-link" id="highscores-tab" data-toggle="tab" href="#highscores" role="tab"
+            aria-controls="highscores" aria-selected="false">
+            <h4>{{#str}} highscores, mod_mooduell {{/str}}</h4>
+        </a>
     </li>
 </ul>
 <div class="tab-content" id="mooduellTabContent">
