Corrected "Moodle Code Checker" from github, mostly 'Unexpected MOODLE_INTERNAL'
Corrected the last bits of  "Moodle Code Checker"

Moodle PHPDoc Checker on mod_mooduell, missing parameters added in file manage_token.php

Moodle PHPDoc Checker on mod_mooduell, missing parameters are added.

Moodle PHPDoc Checker on mod_mooduell, fixing the missing parameters

Error fixing on "Grunt on mod_mooduell"

Fixing errors in "Mustache Lint" on mod_mooduell

Moodle PHPDoc Checker, fixing errors

Error fixing, Moodle PHPDoc Checker on mod_mooduell

Fixing errors "Mustache Lint" on mod_mooduell

finishing PHPDOC Checker

# Conflicts:
#	classes/external.php
#	classes/manage_tokens.php

Linting in multiple files

# Conflicts:
#	classes/game_control.php
#	classes/observer.php

--- a/templates/viewquestions.mustache
+++ b/templates/viewquestions.mustache
@@ -22,6 +22,14 @@
     * headings - array: An array of table headings.
     * rows - array: An array of content rows for the table.
 
+
+    Example context (json):
+    {
+       "headings": [],
+       "rows": [],
+       "quizname": "test"
+    }
+
     }}
 
 <h2>{{quizname}}</h2>
