--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -20,6 +20,7 @@
     * none
     Context variables required for this template:
     Example context (json):
+    
     {
         "categories" : [
             [
@@ -32,21 +33,29 @@
             ]
         ],
         "questions" : [
-            "questionid" : 2,
+          [
+            {
+            "questionid" : "2",
             "imageurl" : "https://image.png",
             "imagetext" : "my text",
             "questiontext" : "my question",
             "answers" : [
+              {
                 "answertext" : "this is the answer",
                 "correct" : "true"
+              }
             ],
             "questiontype" : "multichoice",
-            "length" : "77"
+            "length" : "77",
             "categoryname" : "7",
             "warnings" : [
+              {
                 "warningstet" : "this is a warning"
+              }
             ],
             "status" : "OK"
+            }
+          ]
         ]
     }
 }}
