Fixing errors in "Mustache Lint" on mod_mooduell

--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -32,7 +32,7 @@
             ]
         ],
         "questions" : [
-            "questionid" : 2,
+            "questionid" : "2",
             "imageurl" : "https://image.png",
             "imagetext" : "my text",
             "questiontext" : "my question",
