some fixes for new wunderbyte table

--- a/templates/list_action.mustache
+++ b/templates/list_action.mustache
@@ -59,3 +59,10 @@
         </div>
     </div>
 </div>
+
+<script>
+    console.log('idstring {{idscring}} checking in');
+    require(['local_wunderbyte_table/init'], function(init) {
+     init.init('{{idstring}}', '{{encodedtable}}');
+    });
+</script>
