More fixes for Moodle 4

--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -86,7 +86,7 @@
     {{#questions}}
         <tr class="field">
             <td>
-                <a href="../../question/question.php?returnurl=/question/edit.php?courseid={{courseid}}&courseid={{courseid}}&id={{questionid}}">
+                <a href="{{path}}?returnurl=/question/edit.php?courseid={{courseid}}&courseid={{courseid}}&id={{questionid}}">
                 {{questionid}}
                 </a>
             </td>
