--- a/templates/overview_students.mustache
+++ b/templates/overview_students.mustache
@@ -49,11 +49,11 @@
         <div class="col-md">
             <div class="row">
                 <div class="col-sm">{{#str}} univiemooduellappstore, mod_mooduell {{/str}}</div>
-                <div class="col-sm" style="text-align: center;"><a href='https://apps.apple.com/at/app/univie-mooduell/id1496638765'><img style="width: 140px; max-width: 100%" alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a></div>
+                <div class="col-sm" style="text-align: center;"><a href='{{appstorelink}}'><img style="width: 140px; max-width: 100%" alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a></div>
             </div>
             <div class="row">
                 <div class="col-sm">{{#str}} univiemooduellplaystore, mod_mooduell {{/str}}</div>
-                <div class="col-sm" style="text-align: center;"><a href='https://play.google.com/store/apps/details?id=at.wunderbyte.univiemooduell&hl=de&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img style="width: 160px; max-width: 100%" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a></div>
+                <div class="col-sm" style="text-align: center;"><a href='{{playstorelink}}'><img style="width: 160px; max-width: 100%" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a></div>
             </div>
         </div>
         <div class="col-md">
