--- a/templates/list_action.mustache
+++ b/templates/list_action.mustache
@@ -56,3 +56,9 @@
         </div>
     </div>
 </div>
+
+<script>
+    require(['local_wunderbyte_table/init'], function(init) {
+     init.init('{{idstring}}', '{{encodedtable}}');
+    });
+</script>
