Fixed: Add Questions / Download Table / Last Changed Highscore / Modal Game ID / Footer Issue

--- a/templates/list_action.mustache
+++ b/templates/list_action.mustache
@@ -40,9 +40,8 @@
      aria-labelledby="mooduellModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <div class="modal-header bg-primary">
-                <h5 class="modal-title" id="mooduellModalLabel">{{counter}}</h5>
-                <button type="button" class="btn btn-closex" data-dismiss="modal">X</button>
+            <div class="modal-header bg-primary justify-content-end">
+                <button type="button" class="btn btn-closex text-white" data-dismiss="modal">X</button>
             </div>
             <div class="modal-body">
                 <!-- The actual content goes here. -->
