Added Share QR strings

--- a/templates/overview_students.mustache
+++ b/templates/overview_students.mustache
@@ -89,6 +89,7 @@
                             <div class="col-md">
                                 <h4>{{#str}} qrtitle, mod_mooduell {{/str}}</h4>
                                 <p>{{#str}} qrdesc, mod_mooduell {{/str}}</p>
+                                <p>{{#str}} qrshare, mod_mooduell {{/str}}</p>
                             </div>
                             {{#qrimage}}
                             <div class="col-md" style="text-align: center">
