gitHub Linting: fix for mustache

--- a/templates/list_action.mustache
+++ b/templates/list_action.mustache
@@ -32,7 +32,7 @@
 }}
 
 
-<a href="#" data-toggle="modal" data-target="#mooduell-modal{{counter}}">
+<a href="#" id="mooduellModalLabel" data-toggle="modal" data-target="#mooduell-modal{{counter}}">
     <i class="fa fa-info"></i>
 </a>
 
