--- a/templates/overview_teachers.mustache
+++ b/templates/overview_teachers.mustache
@@ -122,7 +122,7 @@
                             </div>
                             {{/qrimage}}
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer qrcode">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">{{#str}} close, mod_mooduell {{/str}}</button>
                         </div>
                     </div>
